
public partial class Constants
{
    public class Player
	{
		public const string Tag = "Player";
		public const string JumpAnimTrigger = "Jump";
		public const string LandAnimTrigger = "Land";
		public const string MovingAnimBool = "IsMoving";
		public const float AllowedCollisionMargin = 0.025f;
		public const float JumpCooldown = 0.154f;
	}
}
